--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1,16 +1,18 @@
 /****************************************************************************************/
 /* Global color codes:                                                                  */
-/* dark-purple:   #382f44                                                               */
+/* dark-purple:        #382f44                                                          */
 /* transparent-purple: #e9e7ef (for inactive backgrounds)                               */
 /*                                                                                      */
-/* light-purple1: #b396f6 (main purple for white backgrounds)                           */
-/* light-purple2: #9179c7 (sligtly darker for gradients)                                */
+/* light-purple1:      #b396f6 (main purple for white backgrounds)                      */
+/* light-purple2:      #9179c7 (sligtly darker for gradients)                           */
 /*                                                                                      */
-/* medium-purple1: #5c4c7c (main purple for dark backgrounds)                           */
-/* medium-purple2: #5b4c86 (sligtly darker for gradients)                               */
+/* medium-purple1:     #6f5ca3 (on hover)                                               */
+/* medium-purple1:     #5c4c7c (main purple for dark backgrounds)                       */
+/* medium-purple2:     #5b4c86 (sligtly darker for gradients)                           */
 /*                                                                                      */
-/* fuchsia:       #df1cca                                                               */
-/* background:    #f8f6f6                                                               */
+/* fuchsia:            #df1cca                                                          */
+/* background:         #f8f6f6                                                          */
+/* input fields:       #e7e7e7                                                          */
 /****************************************************************************************/
 
 WalletFrame {
@@ -94,7 +96,7 @@ background-color: #372f44; /* Do not highlight placeholder on hover */
 }
 
 QMessageBox {
-background-color:#F8F6F6;
+background-color:#fff;
 }
 
 QProgressBar {
@@ -169,27 +171,39 @@ background-color:transparent;
 }
 
 .QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
-border: 1px solid #5c4c7c;
-font-size:11px;
+font-size:12px;
 min-height:25px;
 outline:0;
 padding:3px;
-background-color:#fcfcfc;
-color:#333333;
+border:0px;
+color:#333;
+background-color:#f2f2f2;
+}
+
+.QValidatedLineEdit:!focus {
+color:#5c4c7c;
+background-color:#e7e7e7;
 }
 
 .QLineEdit:!focus {
-font-size:12px;
+color:#5c4c7c;
+background-color:#e7e7e7;
 }
 
+/*
+.QValidatedLineEdit:checked, .QLineEdit:checked {
+background-color: #00ffff;
+}
+*/
 .QValidatedLineEdit:disabled, .QLineEdit:disabled {
+color: #5c4c7c;
 background-color:#f2f2f2;
 }
 
 /****************************************************************************************/
 
 QPushButton { /* Global Button Style */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #64ACD2, stop: .1 #382f44, stop: .95 #382f44, stop: 1 #1D80B5);
+background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #382f44, stop: .1 #5B4C86, stop: .95 #5B4C86, stop: 1 #5c4c7c);
 border:0;
 border-radius:3px;
 color:#ffffff;
@@ -202,7 +216,8 @@ padding-bottom:5px;
 }
 
 QPushButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #5B4C9A, stop: .1 #5B4C86, stop: .95 #5B4C86, stop: 1 #5c4c7c);
+/* background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #5B4C86, stop: .4 #b396f6, stop: .6 #b396f6, stop: 1 #5b4c86); */
+background-color: qlineargradient(x1:0, x2: 1, stop: 0 #ce00bc, stop: 0.04 #ce00bc, stop: 0.0401 #6f5ca3, stop: 1 #6f5ca3);
 }
 
 QPushButton:focus {
@@ -274,22 +289,27 @@ selection-color:transparent;
 }
 
 QAbstractSpinBox {
-border:1px solid #5c4c7c;
 padding: 3px 5px 3px 5px;
 background:#fcfcfc;
+font-size:12px;
 min-height:25px;
-color:#818181;
+outline:0;
+padding:3px;
+border:0px;
+color:#333;
+background-color:#f2f2f2;
+}
+
+QAbstractSpinBox:!focus {
+color:#5c4c7c;
+background-color:#e7e7e7;
 }
 
 QAbstractSpinBox::up-button {
 subcontrol-origin: border;
 subcontrol-position: top right;
 width:21px;
-background:#fcfcfc;
-border-left:0px;
-border-right:1px solid #5c4c7c;
-border-top:1px solid #5c4c7c;
-border-bottom:0px;
+background:#e7e7e7; /* Remove this to get 3D rendered buttons */
 padding-right:1px;
 padding-left:5px;
 padding-top:2px;
@@ -303,11 +323,7 @@ QAbstractSpinBox::down-button {
 subcontrol-origin: border;
 subcontrol-position: bottom right;
 width:21px;
-background:#fcfcfc;
-border-top:0px;
-border-left:0px;
-border-right:1px solid #5c4c7c;
-border-bottom:1px solid #5c4c7c;
+background:#e7e7e7; /* Remove this to get 3D rendered buttons */
 padding-right:1px;
 padding-left:5px;
 padding-bottom:2px;
@@ -315,6 +331,23 @@ padding-bottom:2px;
 
 QAbstractSpinBox::down-arrow {
 image:url(':/images/downArrow_small');
+}
+
+QValueComboBox {
+padding: 3px 5px 3px 5px;
+background:#fcfcfc;
+font-size:12px;
+min-height:25px;
+outline:0;
+padding:3px;
+border:0px;
+color:#333;
+background-color:#f2f2f2;
+}
+
+QValueComboBox:!focus {
+color:#5c4c7c;
+background-color:#e7e7e7;
 }
 
 /****************************************************************************************/
@@ -509,8 +542,12 @@ border-radius: 8px;
 /**************************** DIALOG BOXES **********************************************/
 
 QDialog {
-background-color: #f8f6f6;
+background-color: #fff;
 }
+AskPassphraseDialog {
+background-color: #fff;
+}
+
 
 QDialog .QTabWidget {
 border-bottom:1px solid #333;
@@ -521,7 +558,7 @@ border: 1px solid #d7d7d7;
 }
 
 QDialog .QTabWidget QTabBar::tab {
-background-color:#f2f0f0;
+background-color:#f8f6f6;
 color:#333;
 padding-left:10px;
 padding-right:10px;
@@ -607,9 +644,7 @@ background-color:transparent;
 padding-left:15px;
 }
 
-QDialog#SignVerifyMessageDialog QLineEdit:!focus { /* Font Hack */
-font-size:10px;
-}
+/* QDialog#SignVerifyMessageDialog QLineEdit:!focus { /* Font Hack */
 
 QDialog#SignVerifyMessageDialog QPushButton#copySignatureButton_SM { /* Copy Button */
 /* qproperty-icon: url(":/icons/editcopy"); */
@@ -800,8 +835,7 @@ width:1px;
 /* Encrypt Wallet and Change Passphrase Dialog */
 QDialog#AskPassphraseDialog QLabel#passLabel1, QDialog#AskPassphraseDialog QLabel#passLabel2, QDialog#AskPassphraseDialog QLabel#passLabel3 {
 qproperty-alignment: 'AlignVCenter | AlignRight';
-min-width:170px;
-min-height:33px; /* base width of 25px for QLineEdit, plus padding and border */
+
 }
 
 /* Options Dialog */
@@ -1327,7 +1361,7 @@ QDialog#SendCoinsDialog {
 background-color:#fff;
 }
 
-QDialog#SendCoinsDialog .QFrame#frameCoinControl_BG { /* Coin Control Section */
+QDialog#SendCoinsDialog .QFrame#frameCoinControl { /* Coin Control Section */
 background-color:#ffffff;
 }
 
@@ -1363,9 +1397,6 @@ font-weight:bold;
 font-size:14px;
 margin-right:5px;
 padding-right:5px;
-/* color:#382f44; */
-/* font-weight:bold; */
-/* font-size:14px; */
 }
 
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl { /* Coin Control Inputs */
@@ -1375,71 +1406,26 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .Q
 padding:2px;
 }
 
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QCheckBox#checkBoxCoinControlChange { /* Custom Change Label */
-}
-
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange { /* Custom Change Address */
-}
-
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange:!focus { /* Custom Change Address */
-color: #5c4c7c;
-background-color: #e9e7ef;
-}
-
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLineEdit#splitBlockLineEdit { /* TX Splitter */
-}
-
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLineEdit#splitBlockLineEdit:!focus { /* TX Splitter */
-color: #5c4c7c;
-background-color: #e9e7ef;
-}
+/* QDialog#SendCoinsDialog .QFrame#frameCoinControl .QCheckBox#checkBoxCoinControlChange { /* Custom Change Label */ 
+/* QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange { /* Custom Change Address */
+/* QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange:!focus { /* Custom Change Address */
+/* QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLineEdit#splitBlockLineEdit { */
+/* QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLineEdit#splitBlockLineEdit:!focus { /* TX Splitter */
 
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlChangeLabel { /* Custom Change Address Validation Label */
 font-weight:normal;
-qproperty-margin:-6;
-margin-right:112px;
 }
 
 QDialog#SendCoinsDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents { /* Send To Widget */
 background-color:#ffffff;
 }
 
-QDialog#SendCoinsDialog .QPushButton#sendButton { /* Send Button */
+QDialog#SendCoinsDialog .QPushButton { /* Send Button */
 padding-left:10px;
 padding-right:10px;
 }
 
-QDialog#SendCoinsDialog .QPushButton#clearButton { /* Clear Button */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
-border:1px solid #d2d2d2;
-color:#616161;
-padding-left:10px;
-padding-right:10px;
-}
-
-QDialog#SendCoinsDialog .QPushButton#clearButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
-color:#333;
-}
-
-QDialog#SendCoinsDialog .QPushButton#clearButton:pressed {
-border:1px solid #9e9e9e;
-}
-
-QDialog#SendCoinsDialog .QPushButton#addButton { /* Add Button */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
-border:1px solid #d2d2d2;
-color:#616161;
-padding-left:10px;
-padding-right:10px;
-}
-
-QDialog#SendCoinsDialog .QPushButton#addButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
-color:#333;
-}
-
-QDialog#SendCoinsDialog .QPushButton#addButton:pressed {
+QDialog#SendCoinsDialog .QPushButton:pressed {
 border:1px solid #9e9e9e;
 }
 
@@ -1485,17 +1471,12 @@ QDialog#SendCoinsDialog QLabel#labelBalance {
 margin-left:0px;
 padding-left:0px;
 color:#333333;
-/* font-weight:bold;
-border-radius:5px;
-padding-top:20px;
-padding-bottom:20px; */
 min-height:27px;
 }
 
 /**************************** SEND COINS ENTRY ******************************************/
 
 QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel { /* Send Coin Entry Labels */
-/* background-color:#5c4c7c; */
 min-width:10px;
 font-weight:bold;
 min-height:25px;
@@ -1503,12 +1484,8 @@ margin-right:5px;
 padding-right:5px;
 }
 
-QStackedWidget#SendCoinsEntry .QValidatedLineEdit#payTo { /* Pay To Input Field */
-}
-
-QStackedWidget#SendCoinsEntry .QValidatedLineEdit#payTo:!focus { /* Pay To Input Field */
-color: #5c4c7c;
-}
+/* QStackedWidget#SendCoinsEntry .QValidatedLineEdit#payTo { /* Pay To Input Field */
+/* QStackedWidget#SendCoinsEntry .QValidatedLineEdit#payTo:!focus { /* Pay To Input Field */
 
 QStackedWidget#SendCoinsEntry .QToolButton { /* General Settings for Pay To Icons */
 background-color:transparent;
@@ -1531,12 +1508,8 @@ QStackedWidget#SendCoinsEntry .QToolButton#pasteButton {
 QStackedWidget#SendCoinsEntry .QToolButton#deleteButton {
 }
 
-QStackedWidget#SendCoinsEntry .QLineEdit#addAsLabel { /* Pay To Input Field */
-}
-
-QStackedWidget#SendCoinsEntry .QLineEdit#addAsLabel:!focus { /* Pay To Input Field */
-color: #5c4c7c;
-}
+/* QStackedWidget#SendCoinsEntry .QLineEdit#addAsLabel { /* Pay To Input Field */
+/* QStackedWidget#SendCoinsEntry .QLineEdit#addAsLabel:!focus { /* Pay To Input Field */
 
 /**************************** COIN CONTROL POPUP ****************************************/
 
@@ -1683,81 +1656,40 @@ QWidget#ReceiveCoinsDialog {
 background-color:#fff;
 }
 
-QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2 { /* Label Label */
-background-color:#5c4c7c;
-min-width:102px;
-color:#ffffff;
+QWidget#ReceiveCoinsDialog .QFrame#frame {
+background-color:#ffffff;
+}
+
+QWidget#ReceiveCoinsDialog .QFrame#frame2 {
+background-color:#ffffff;
+}
+
+QWidget#ReceiveCoinsDialog .QFrame#frame2  > .QLabel { /* Receive Coin Labels */
+min-width:10px;
 font-weight:bold;
-font-size:11px;
+min-height:25px;
+margin-right:5px;
 padding-right:5px;
 }
 
-QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label { /* Amount Label */
-background-color:#6a6a6a;
-min-width:102px;
-color:#ffffff;
-font-weight:bold;
-font-size:11px;
-padding-right:5px;
-}
+/* QWidget#ReceiveCoinsDialog .QFrame#frame2  > .QLineEdit { /* Receive Coin LineEdits */
+/* QWidget#ReceiveCoinsDialog .QFrame#frame2  > .QLineEdit:!focus { /* Receive Coin LineEdits */
 
-QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3 { /* Message Label */
-background-color:#5c4c7c;
-min-width:102px;
-color:#ffffff;
-font-weight:bold;
-font-size:11px;
-padding-right:5px;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton#clearButton { /* Clear Button */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
-border:1px solid #d2d2d2;
-color:#616161;
+QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton { /* Clear Button */
 padding-left:10px;
 padding-right:10px;
 }
 
-QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton#clearButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
-color:#333;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton#clearButton:pressed {
+QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton:pressed {
 border:1px solid #9e9e9e;
 }
 
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#showRequestButton { /* Show Button */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
-border:1px solid #d2d2d2;
-color:#616161;
+QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton { /* Clear Button */
 padding-left:10px;
 padding-right:10px;
 }
 
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#showRequestButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
-color:#333;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#showRequestButton:pressed {
-border:1px solid #9e9e9e;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#removeRequestButton { /* Remove Button */
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
-border:1px solid #d2d2d2;
-color:#616161;
-padding-left:10px;
-padding-right:10px;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#removeRequestButton:hover {
-background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
-color:#333;
-}
-
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#removeRequestButton:pressed {
+QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton:pressed {
 border:1px solid #9e9e9e;
 }
 
